--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: barryz Blog
 SEOTitle: barryz | 我的博客
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
+email: barryzxb@gmail.com
 description: "随笔、博客、生活"
 keyword: ""
 url: "http://blog.barryz.cc"              # your host, for absolute URL
