--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ ga_domain: huangxuan.me
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "write what you want"
-sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/avatar-barryz.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
